Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-15483

Memory leak in memcached config reload handling

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.0.0
    • 4.0.0
    • memcached
    • Security Level: Public
    • Untriaged
    • Centos 64-bit
    • Unknown

    Description

      During Valgrind testing a number of memory leaks were identified in the config reload handling code in memcached.

      This code is invoked (and the leaks) triggered when the CONFIG_RELOAD command (added at part of MB-11066) is called by ns_server.

      Severity Analysis

      The leaks total approx. 900 bytes every time CONFIG_RELOAD is called.

      This is an privileged command (i.e. only ns_server can call it), and it is only called as a side-effect of a Admin user issuing a REST API request to change configuration (e.g. curl -u Administrator:asdasd -X POST localhost:8091/pools/default/settings/memcached/global --data verbosity=2.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            drigby Dave Rigby (Inactive)
            drigby Dave Rigby (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty