MB-15483: config_parse: Fix leaks during reconfiguring

Fix memory leaks found during Valgrind testing of memcached config
reload. Note that while these leaks should be rare (as reloading
config is a rare occurance, and an admin-only command) they *can*
happen in production.

Change-Id: I4992b52a08a71c981a38d7f62e4d65bcb4dccf04
Reviewed-on: http://review.couchbase.org/52658
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>
Tested-by: buildbot <build@couchbase.com>